[gd_scene load_steps=4 format=3 uid="uid://ccepyyal0bueb"]

[ext_resource type="Texture2D" uid="uid://y5wc0ucg2dvk" path="res://Assets/Enemy3.png" id="1_h7sun"]
[ext_resource type="Script" path="res://Scripts/enemy_3.gd" id="1_m27r0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ke3hl"]
size = Vector2(4, 3)

[node name="enemy_3" type="Area2D" groups=["enemy"]]
scale = Vector2(2, 2)
script = ExtResource("1_m27r0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_ke3hl")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_h7sun")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, -3.5)
scale = Vector2(0.3, 0.075)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
